fixes browse search field showing invisible text in safari because it was set to white on white as background-color is apparently ignored by safari

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -138,8 +138,8 @@
       }
 
       #search-bar:focus{
-        background-color: rgba(130,130,130, .75);
-        color: white;
+        /*background-color: rgba(130,130,130, .75);*/
+        color: black;
       }
 
       .load{
